2020 06 27 Make modal close button invisible
Make modal close button invisible until I fix the issue

--- a/index-todo-V4.0-arr.html
+++ b/index-todo-V4.0-arr.html
@@ -29,7 +29,7 @@
 </div>
 <div class="modal" id="modal">
     <div class="modalCont">
-        <span class="close">&times;</span>
+        <span class="close" style="display: none">&times;</span>
         <p class="modalTxt">Are you sure you want to delete ALL notes?</p>
         <div class="yesNo">
             <button id="yes" onclick="deleteAll()">Yes, delete all notes</button>
